# shantytown

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: adapters.md  agent-card.md  cli.md  design.md  integrations.md  roles.md  vision.md
scripts/: install-scrub-guard.sh  pre-push-scrub-guard.sh
shantytown/: __init__.py  anchor.py  beads.py  bobbin.py  cli.py  dashboard.py  desirepath.py  dispatch.py  doctor.py  events.py  feed_check.py  files.py  forgejo.py  harness.py  inbox.py  launched.py  notify.py  policy.py  prime.py  protocols.py  provision.py  quipu.py  quipu_events.py  reactor.py  roles.py  runtime.py  selfcheck.py  stats.py  stop_event.py  supervisor.py  tend.py  tier.py  tmux.py  triage.py  workflow.py  workspace.py
tests/: conftest.py  test_admin_workflow.py  test_anchor.py  test_attach.py  test_auth_dead.py  test_backend_select.py  test_beads_plate.py  test_cli_role.py  test_command_count.py  test_context.py  test_crew_work.py  test_cycle.py  test_dashboard.py  test_desirepath.py  test_dispatch.py  test_dispatch_triage.py  test_dispatch_verify.py  test_docs_drift.py  test_doctor.py  test_events.py  test_feed_check.py  test_forgejo.py  test_full_cycle.py  test_go_cli.py  test_go_note.py  test_go_worktree.py  test_harness.py  test_haul.py  test_hook_interpreter.py  test_idle_fleet.py  test_inbox.py  test_inbox_durable.py  test_inbox_task.py  test_input_state.py  test_internal_identifier_ratchet.py  test_keep_current.py  test_launched.py  test_leak.py  test_mail_durable.py  test_mail_task.py  (+41 more)
