[project]
name = "shantytown"
version = "0.0.1"
description = "A small harness for running a crew of coding agents."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Brown", email = "scbrown3@gmail.com" }]
dependencies = []

# Declared for TWO reasons, both of which broke a deploy tonight:
#  1. A top-level assets/ dir gives setuptools' flat-layout auto-discovery two
#     candidate packages, so it refuses to build rather than guess.
#  2. Without a build-system table, PEP 660 EDITABLE installs (pip/pipx -e)
#     fail — which silently freezes the install and stops `git pull` from
#     deploying anything to the running fleet.
# setuptools>=77 is required by the PEP 639 `license = "MIT"` string form above;
# an older pin fails on that line.
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shantytown"]

[project.scripts]
st = "shantytown.cli:main"

# EXPLICIT, not auto-discovered. setuptools' flat-layout discovery scans the repo
# ROOT for top-level packages, so the moment `assets/` was added for the README
# logo (41d9fc2) it found two — `assets` and `shantytown` — and REFUSED to build:
#
#   error: Multiple top-level packages discovered in a flat-layout:
#          ['assets', 'shantytown']
#
# The repo was uninstallable from that commit onward and nothing said so: the test
# suite is run from the source tree, so 497 tests stayed green while
# `pipx install .` could not produce a wheel at all. It surfaced only when a deploy
# was attempted, and the error names the packaging layout rather than the docs
# commit that caused it.
#
# Pinning the list means any future top-level directory — docs/, examples/, more
# assets — is inert to the build instead of breaking it.
[tool.setuptools]
packages = ["shantytown"]

[tool.pytest.ini_options]
testpaths = ["tests"]
