[project]
name = "shantytown"
version = "0.0.1"
description = "A small harness for running a crew of coding agents."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Brown", email = "scbrown3@gmail.com" }]
dependencies = []

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shantytown"]

[project.scripts]
st = "shantytown.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Declared so an EDITABLE install (pip install -e / pipx install -e) can build.
# Without a build-system table, PEP 660 editable builds fail — which silently
# converted this install into a frozen copy and stopped `git pull` from
# deploying anything to the running fleet.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shantytown"]
