[project]
name = "shantytown"
version = "0.0.1"
description = "A small harness for running a crew of coding agents."
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Steve Brown", email = "scbrown3@gmail.com" }]
dependencies = []

# Declared for TWO reasons, both of which broke a deploy tonight:
#  1. A top-level assets/ dir gives setuptools' flat-layout auto-discovery two
#     candidate packages, so it refuses to build rather than guess.
#  2. Without a build-system table, PEP 660 EDITABLE installs (pip/pipx -e)
#     fail — which silently freezes the install and stops `git pull` from
#     deploying anything to the running fleet.
# setuptools>=77 is required by the PEP 639 `license = "MIT"` string form above;
# an older pin fails on that line.
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shantytown"]

[project.scripts]
st = "shantytown.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
